Instalação e testes com o ORM Prisma

--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "devDependencies": {
+    "@types/node": "^25.1.0",
+    "@types/pg": "^8.16.0",
     "@types/uuid": "^10.0.0",
+    "prisma": "^7.3.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
+    "dotenv": "^17.2.3",
+    "pg": "^8.17.2",
     "uuid": "^13.0.0"
   }
 }
